--- a/mostpopular.html
+++ b/mostpopular.html
@@ -77,7 +77,7 @@
     background-color: #373b69;
 }
 #searchmovie{
-   visibility: hidden;
+  /* visibility: hidden;*/
     width: 320px;
     height: 326px;
     overflow: auto;
