--- a/mostpopular.html
+++ b/mostpopular.html
@@ -77,7 +77,7 @@
     background-color: #373b69;
 }
 #searchmovie{
-  /* visibility: hidden;*/
+   visibility: hidden;
     width: 320px;
     height: 326px;
     overflow: auto;
@@ -151,8 +151,8 @@ h1{
     </div>
     <form>
         
-        <input type="text"  oninput="debounce(main,1000)" placeholder="search" id="search" class="search"/>
-        <div id= 'searchmovie'></div>
+        <input type="text"  oninput="debounce(main,1000)" placeholder="search" id="search" class="search"  onclick="visible()"/>
+        <div onclick="remove(event)" id="x"><div  id= 'searchmovie'></div></div>
     </form>
 </header>
 </div>
@@ -478,7 +478,7 @@ function append(){
  
     }
 */
-
+/*
     var search = document.getElementById('search')
 
    search.addEventListener('onclick',visible)
@@ -487,6 +487,19 @@ function append(){
     var searchmovie = document.getElementById('searchmovie') 
     searchmovie.style.visibility= 'visible'
    }
+*/
+
+
+function remove(e){
+    let x= document.getElementById('x')
+    let searchmovie = document.getElementById('searchmovie')  
+    let throwawayNode = x.removeChild(searchmovie);
+}
+
+function visible(){
+    let searchmovie = document.getElementById('searchmovie') 
+    searchmovie.style.visibility = 'visible'
+}
 
     </script>
 </body>
