--- a/signup.html
+++ b/signup.html
@@ -108,7 +108,7 @@ fetch(`https://masai-api-mocker.herokuapp.com/user/${username}`,{
     console.log('res:', res)
 
     //
-      append(res)
+     // append(res)
    
     //
 })
