--- a/mostpopular.html
+++ b/mostpopular.html
@@ -262,7 +262,7 @@ async function main(){
     appendmovies(res.Search)
    console.log('res:', res.Search)
 
-   tolocalstorage(res.Search)
+   tolocalstorage(res.Search)    // function is append here to transfer data to local storage 
 }
 
 function appendmovies(movies){
